--- a/_config.yml
+++ b/_config.yml
@@ -224,8 +224,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Hu]
+  first_name: [Zihan]
 
   style: apa
   locale: en
@@ -246,14 +246,23 @@ scholar:
   details_link: Details
 
   query: "@*"
+  group_by: year
+  group_order: descending
+
+# # Display different badges withs stats for your publications
+# enable_publication_badges:
+#   altmetric: true # Altmetric badge (https://www.altmetric.com/products/altmetric-badges/)
+#   dimensions: true # Dimensions badge (https://badge.dimensions.ai/)
 
 # Filter out certain bibtex entry keywords used internally from the bib output
-filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, selected, supp, blog, code, poster, slides, website, preview]
+filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, selected, supp, blog, code, poster, slides, website, preview, altmetric]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
 max_author_limit: 3  # leave blank to always show all authors
 more_authors_animation_delay: 10  # more authors are revealed on click using animation; smaller delay means faster animation
 
+# Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
+enable_publication_thumbnails: true
 
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
